@@ -14,8 +14,9 @@ import java.io.BufferedWriter;
 import java.io.CharArrayWriter;
 import java.io.FileReader;
 import java.io.FileWriter;
-import java.io.IOException;
 import java.io.Writer;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import org.apache.log4j.Logger;
 import org.globus.cog.abstraction.impl.common.util.NullWriter;
@@ -31,9 +32,11 @@ public class CobaltJob extends Job {
     private String stdout, stderr, tstdout, tstderr;
     private FileLocation outLoc, errLoc;
     private int exitcode;
+    private Pattern exitcodeRegexp;
 
-    public CobaltJob(String jobID, String stdout,
-            String stderr, String tstdout, FileLocation outLoc, String tstderr, FileLocation errLoc, 
+    public CobaltJob(String jobID, String stdout, String stderr,
+            String tstdout, FileLocation outLoc, String tstderr,
+            FileLocation errLoc, Pattern exitcodeRegexp,
             ProcessListener listener) {
         super(jobID, null, null, null, null, null, listener);
         this.stdout = stdout;
@@ -42,6 +45,7 @@ public class CobaltJob extends Job {
         this.outLoc = outLoc;
         this.tstderr = tstderr;
         this.errLoc = errLoc;
+        this.exitcodeRegexp = exitcodeRegexp;
         int exitcode = Integer.MIN_VALUE;
     }
 
@@ -66,7 +70,8 @@ public class CobaltJob extends Job {
                 wr = caw;
             }
             if (tstdout != null && LOCAL_AND_REMOTE.overlaps(outLoc)) {
-                wr = WriterMultiplexer.multiplex(wr, new BufferedWriter(new FileWriter(tstdout)));
+                wr = WriterMultiplexer.multiplex(wr, new BufferedWriter(
+                        new FileWriter(tstdout)));
             }
             if (wr == null) {
                 wr = new NullWriter();
@@ -96,8 +101,9 @@ public class CobaltJob extends Job {
             return false;
         }
     }
-    
-    private static final FileLocation LOCAL_AND_REMOTE = FileLocation.LOCAL.and(FileLocation.REMOTE);
+
+    private static final FileLocation LOCAL_AND_REMOTE = FileLocation.LOCAL
+            .and(FileLocation.REMOTE);
 
     protected boolean processStderr() {
         try {
@@ -108,7 +114,8 @@ public class CobaltJob extends Job {
                 wr = caw;
             }
             if (tstdout != null && LOCAL_AND_REMOTE.overlaps(errLoc)) {
-                wr = WriterMultiplexer.multiplex(wr, new BufferedWriter(new FileWriter(tstderr)));
+                wr = WriterMultiplexer.multiplex(wr, new BufferedWriter(
+                        new FileWriter(tstderr)));
             }
             if (wr == null) {
                 wr = new NullWriter();
@@ -116,7 +123,7 @@ public class CobaltJob extends Job {
             BufferedReader br = new BufferedReader(new FileReader(stderr));
             String line;
             boolean started = false;
-            
+
             do {
                 line = br.readLine();
                 if (line != null) {
@@ -131,22 +138,31 @@ public class CobaltJob extends Job {
                             wr.write('\n');
                         }
                         else {
-                            int index = line.indexOf("BG/L job exit status =");
-                            if (index != -1) {
-                                String es = line.substring(index + 
-                                        "BG/L job exit status =".length()).trim();
-                                if (!es.startsWith("(") && !es.endsWith(")")) {
-                                    throw new IOException(
-                                            "Could not parse job exit status. Invalid exit status line: "
-                                                    + line);
-                                }
-                                else {
-                                    exitcode = Integer.parseInt(es.substring(1, es.length() - 1));
+                            Matcher m = exitcodeRegexp.matcher(line);
+                            if (m.matches()) {
+                                for (int i = 0; i < m.groupCount(); i++) {
+                                    String group = m.group(i + 1);
+                                    if (group != null) {
+                                        group = group.trim();
+                                        if (!group.equals("")) {
+                                            try {
+                                                exitcode = Integer
+                                                        .parseInt(group);
+                                                break;
+                                            }
+                                            catch (NumberFormatException e) {
+                                                throw new NumberFormatException(
+                                                        "Invalid exit status line: "
+                                                                + line
+                                                                + ". Could not parse job exit status: "
+                                                                + group);
+                                            }
+                                        }
+                                    }
                                 }
                             }
                         }
                     }
-
                 }
             } while (line != null);
             br.close();
@@ -154,7 +170,7 @@ public class CobaltJob extends Job {
             if (caw != null) {
                 listener.stderrUpdated(caw.toString());
             }
-            
+
             return true;
         }
         catch (Exception e) {
